# allpairspy-stubs

./: README.md  pyproject.toml
.github/workflows/: publish-to-pip.yml
src/allpairspy-stubs/: __init__.pyi  __version__.pyi  allpairs.pyi  pairs_storage.pyi
tests/: allpairspy
